--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -26,6 +22,22 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/dkgus/karuple/master/src/components/body/qImg/village.webp"
+    />
+    <!-- content="https://github.com/dkgus/crud/blob/master/public/asset/travelImg/banner.png?raw=true" -->
+
+    <meta property="og:site_name" content="사이트 이름을 작성해주세요" />
+    <meta
+      property="og:description"
+      content="나만의 카러플 캐릭터를 만들어보세요!"
+    />
     <title>카러플 MBTI</title>
     <!-- kakao share api init -->
     <script
