fix: 엠비티아이 테스트 이미지 최적화

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,74 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/big_unicorn.ico" />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891180/china.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      hrf="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891182/factory_outside.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891181/factory.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891183/Gangnam.png"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891991/Hawaii.png"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891185/istanbul.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891186/london.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891187/newyork.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891188/singapore.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891179/village.jpg"
+    />
+
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891180/WKC_Japan.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891180/World_Tomb.jpg"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
