--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/dkgus/karuple/master/src/components/body/qImg/village.webp"
+    />
+    <!-- content="https://github.com/dkgus/crud/blob/master/public/asset/travelImg/banner.png?raw=true" -->
+
+    <meta property="og:site_name" content="사이트 이름을 작성해주세요" />
+    <meta
+      property="og:description"
+      content="나만의 카러플 캐릭터를 만들어보세요!"
+    />
     <link rel="icon" href="%PUBLIC_URL%/big_unicorn.ico" />
     <link
       rel="preload"
@@ -12,7 +28,7 @@
     <link
       rel="preload"
       as="image"
-      hrf="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891182/factory_outside.jpg"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/f_auto,q_auto/v1740891182/factory_outside.jpg"
     />
     <link
       rel="preload"
@@ -90,22 +106,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
 
-    <meta
-      property="og:image"
-      content="https://raw.githubusercontent.com/dkgus/karuple/master/src/components/body/qImg/village.webp"
-    />
-    <!-- content="https://github.com/dkgus/crud/blob/master/public/asset/travelImg/banner.png?raw=true" -->
-
-    <meta property="og:site_name" content="사이트 이름을 작성해주세요" />
-    <meta
-      property="og:description"
-      content="나만의 카러플 캐릭터를 만들어보세요!"
-    />
     <title>카러플 MBTI</title>
     <!-- kakao share api init -->
     <script
