fix: 메인페이지 최적화

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,15 @@
       content="나만의 카러플 캐릭터를 만들어보세요!"
     />
     <link rel="icon" href="%PUBLIC_URL%/big_unicorn.ico" />
+
+    <link
+      rel="preconnect"
+      href="https://res.cloudinary.com/dszuqn0vi/image/upload/f_auto,q_auto/v1741247205/main_crop_mcmqzm.jpg"
+    />
+    <link
+      rel="preconnect"
+      href="https://res.cloudinary.com/dfzexvi1u/image/upload/w_200,f_auto,q_auto,dpr_auto/v1744015945/btnImg_nr9hnj.png"
+    />
     <link
       rel="preload"
       as="image"
