feat: 이미지 속도 개선

--- a/public/index.html
+++ b/public/index.html
@@ -21,9 +21,11 @@
     <link rel="icon" href="%PUBLIC_URL%/big_unicorn.ico" />
 
     <link
-      rel="preconnect"
-      href="https://res.cloudinary.com/dszuqn0vi/image/upload/f_auto,q_auto/v1741247205/main_crop_mcmqzm.jpg"
+      rel="preload"
+      href="https://res.cloudinary.com/dszuqn0vi/image/upload/f_auto,q_auto,dpr_auto/v1745817285/main_crop_mcmqzm_defshe.webp"
+      as="image"
     />
+
     <link
       rel="preconnect"
       href="https://res.cloudinary.com/dfzexvi1u/image/upload/w_200,f_auto,q_auto,dpr_auto/v1744015945/btnImg_nr9hnj.png"
@@ -122,6 +124,7 @@
       src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.1/kakao.min.js"
       integrity="sha384-kDljxUXHaJ9xAb2AzRd59KxjrFjzHa5TAoFQ6GbYTCAG0bjM55XohjjDT7tDDC01"
       crossorigin="anonymous"
+      async
     ></script>
   </head>
   <body>
